tests/fixtures/fail/break_outside_loop.sali
let main(): i32 = {
  break 42
}
